<resources>
    <string name="app_name">Floria</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="menu_p">Profil</string>
    <string name="menu_r">Reminder</string>
    <string name="menu_k">Konsultasi</string>
    <string name="menu_t">Tips</string>
    <string name="menu_b">Beranda</string>
    <string name="slide_1_title">Panduan Merawat Tanaman</string>
    <string name="slide_2_title">Informasi Tanaman Hias</string>
    <string name="slide_3_title">Pengingat</string>
    <string name="slide_4_title">Konsultasi</string>
    <string name="slide_1_desc">Temukan ragam video inspiratif mengenai perawatan tanaman hias yang akan membuat tumbuhan Anda bersinar.</string>
    <string name="slide_2_desc">Jelajahi beragam artikel informatif seputar tanaman hias untuk menambah pengetahuan dan wawasan Anda dalam merawat tanaman kesayangan.</string>
    <string name="slide_3_desc">Jangan khawatir lupa merawat tanaman! Gunakan fitur pengingat kami untuk menjaga tanaman hias tetap sehat dan cantik.</string>
    <string name="slide_4_desc">Bertemu dengan ahli! Gunakan fitur konsultasi untuk berkonsultasi langsung dengan para ahli tanaman hias. Dapatkan saran yang tepat untuk tanaman hias Anda.</string>
    <string name="Start">Mulai</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cari_artikel">Cari artikel</string>
    <string name="help_support"><![CDATA[Bantuan & Layanan]]></string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="edit_informasi_profil">Edit Informasi Profil</string>
    <string name="notification">Notifikasi</string>
    <string name="keluar">Keluar</string>
    <string name="des_konsultasi">Temukan solusi terkait permasalahan anda dalam merawat tanaman hias dengan para ahli. Anda juga bisa bertanya tentang apapun seputar tanaman hias.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>

</resources>