<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/bg_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/circle_bg"
        android:minWidth="120dp"
        android:minHeight="120dp"
        android:src="@drawable/user"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@id/bg_profil"
        app:layout_constraintRight_toRightOf="@id/bg_profil"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_bg"
        android:padding="4dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/user_img"
        app:layout_constraintRight_toRightOf="@id/user_img" />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wahyu Purnomo"
        android:textColor="@color/green_950"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_profil"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:contentPadding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_support"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_help" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_chat" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_privacy" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_informasi_profil"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_edit_profil" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_notif" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerInsetStart="8dp"
                app:dividerInsetEnd="8dp"/>
            <TextView
                android:id="@+id/logout_cok"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluar"
                android:textSize="16sp"
                android:textColor="@color/green_950"
                android:drawablePadding="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/p_logout" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>